src/search/snapshots/jiq__search__search_render__search_render_tests__snapshot_search_bar_with_query.snap
---
source: src/search/search_render_tests.rs
expression: output
---
"┌ Search: ────────────────────────────────────────────────────────────── (0/0) ┐"
"│test                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
